# libsession-util-nodejs

./: .gitattributes  .gitignore  .gitmodules  .prettierignore  CMakeLists.txt  README.md  index.d.ts  package.json  pnpm-lock.yaml  prepare_release.sh  update_version.sh
.github/workflows/: test.yml
include/: base_config.hpp  contacts_config.hpp  profile_pic.hpp  user_config.hpp  utilities.hpp
include/blinding/: blinding.hpp
include/encrypt_decrypt/: encrypt_decrypt.hpp
include/groups/: meta_group.hpp  meta_group_wrapper.hpp
include/meta/: meta_base_wrapper.hpp
include/multi_encrypt/: multi_encrypt.hpp
include/pro/: pro.hpp  types.hpp
patches/: oxen-libquic.patch
src/: addon.cpp  base_config.cpp  base_config.hpp  constants.cpp  contacts_config.cpp  convo_info_volatile_config.cpp  user_config.cpp  user_groups_config.cpp  user_groups_config.hpp  utilities.cpp  utilities.hpp
src/blinding/: blinding.hpp
src/encrypt_decrypt/: encrypt_decrypt.cpp
src/groups/: meta_group.hpp  meta_group_wrapper.cpp  meta_group_wrapper.hpp
src/meta/: meta_base_wrapper.cpp  meta_base_wrapper.hpp
src/multi_encrypt/: multi_encrypt.hpp
src/pro/: pro.cpp  types.cpp
types/: index.d.ts  shared.d.ts
types/blinding/: blinding.d.ts  index.d.ts
types/groups/: groupkeys.d.ts  groupmembers.d.ts  index.d.ts  metagroup.d.ts
types/multi_encrypt/: multi_encrypt.d.ts
types/pro/: index.d.ts  pro.d.ts
types/user/: contacts.d.ts  convovolatile.d.ts  userconfig.d.ts  usergroups.d.ts
types/utilities/: index.d.ts  utilities.d.ts
user/: userconfig.d.ts
